WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
181902
Release assertion in canExecuteScript when executing scripts during page cache restore
https://bugs.webkit.org/show_bug.cgi?id=181902
Summary
Release assertion in canExecuteScript when executing scripts during page cach...
Ryosuke Niwa
Reported
2018-01-19 21:50:31 PST
The release assertion in canExecuteScript is hit when scripts are executed while restoring a document from a page cache. <
rdar://problem/35656072
>
Attachments
Fixes the crash
(11.42 KB, patch)
2018-01-19 22:26 PST
,
Ryosuke Niwa
koivisto
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2018-01-19 22:26:05 PST
Created
attachment 331831
[details]
Fixes the crash
Ryosuke Niwa
Comment 2
2018-01-21 19:38:27 PST
Thanks for the review!
Ryosuke Niwa
Comment 3
2018-01-21 19:39:37 PST
Committed
r227280
: <
https://trac.webkit.org/changeset/227280
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug